--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,6 @@
     <color name="colorDarkOrange">#f27d10</color>
     <color name="colorBlack">#000000</color>
     <color name="colorWhite">#ffffff</color>
-    <color name="colorSecondary">#FFF0F0</color>
+    <color name="colorSecondary">#F0FFF0</color>
 
 </resources>
