--- a/app/src/main/res/layout/food_menu_frag.xml
+++ b/app/src/main/res/layout/food_menu_frag.xml
@@ -1,29 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
-
-    <android.support.design.widget.TabLayout
+    <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
-        android:id="@+id/tabLayout"
-        app:tabIndicatorHeight="5dp"
-        app:tabIndicatorColor="@color/colorSecondaryDark"
-        android:background="@color/colorPrimaryDark"
-        app:tabTextColor="@color/colorPrimary"
-        app:tabSelectedTextColor="@color/colorSecondaryDark"
-        android:layout_height="wrap_content">
+        android:layout_height="200dp"
+        android:id="@+id/menu_appBarlayout"
+        android:background="@color/colorPrimaryDark">
+        <android.support.design.widget.CollapsingToolbarLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/menu_tabs_collapsLayout"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed">
+        <ImageView
+            android:layout_width="match_parent"
+            app:layout_collapseMode="parallax"
+            android:id="@+id/menu_tabs_image"
+            android:fitsSystemWindows="true"
+            android:layout_height="150dp" />
+            <android.support.v7.widget.Toolbar
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_gravity="bottom"
+                app:layout_collapseMode="pin">
+                <android.support.design.widget.TabLayout
+                    android:layout_width="match_parent"
+                    android:id="@+id/tabLayout"
+                    app:tabIndicatorHeight="5dp"
+                    android:layout_marginRight="10dp"
+                    app:tabIndicatorColor="@color/colorSecondaryDark"
+                    android:background="@color/colorPrimaryDark"
+                    app:tabTextColor="@color/colorPrimary"
+                    app:tabSelectedTextColor="@color/colorSecondaryDark"
+                    android:layout_height="50dp">
 
-    </android.support.design.widget.TabLayout>
+                </android.support.design.widget.TabLayout>
+
+            </android.support.v7.widget.Toolbar>
+        </android.support.design.widget.CollapsingToolbarLayout>
+
+
+
+    </android.support.design.widget.AppBarLayout>
 
     <android.support.v4.view.ViewPager
         android:layout_width="match_parent"
-        android:layout_height="0px"
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
         android:layout_weight="1"
         android:background="@color/colorPrimary"
         android:id="@+id/menuTabContent">
     </android.support.v4.view.ViewPager>
 
-</LinearLayout>
+</android.support.design.widget.CoordinatorLayout>
