--- a/app/src/main/res/layout/food_menu_frag.xml
+++ b/app/src/main/res/layout/food_menu_frag.xml
@@ -18,6 +18,7 @@
             android:layout_width="match_parent"
             app:layout_collapseMode="parallax"
             android:id="@+id/menu_tabs_image"
+            android:src="@mipmap/tabs_aqurk"
             android:fitsSystemWindows="true"
             android:layout_height="150dp" />
             <android.support.v7.widget.Toolbar
