--- a/app/src/main/res/layout/signup_frag.xml
+++ b/app/src/main/res/layout/signup_frag.xml
@@ -7,28 +7,6 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin">
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textPassword"
-        android:ems="10"
-        android:id="@+id/passwordField"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="156dp"
-        android:hint="@string/password_hint" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textEmailAddress"
-        android:ems="10"
-        android:id="@+id/emailField"
-        android:layout_alignBottom="@+id/passwordField"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="61dp"
-        android:hint="@string/email_hint" />
-
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -48,12 +26,36 @@
         android:id="@+id/passwordFieldCheck"
         android:hint="@string/password_hint" />
 
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textEmailAddress"
+        android:ems="10"
+        android:id="@+id/emailField"
+        android:layout_marginBottom="61dp"
+        android:hint="@string/email_hint"
+        android:layout_above="@+id/signUpButton"
+        android:layout_alignStart="@+id/passwordField"
+        android:layout_marginStart="33dp" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textPassword"
+        android:ems="10"
+        android:id="@+id/passwordField"
+        android:layout_marginTop="156dp"
+        android:hint="@string/password_hint"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="38dp" />
+
     <ProgressBar
         style="?android:attr/progressBarStyleLarge"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/emailField"
-        android:layout_alignStart="@+id/signUpButton"
-        android:id="@+id/progBar_signup" />
+        android:id="@+id/progBar_signup"
+        android:layout_alignBottom="@+id/passwordFieldCheck"
+        android:layout_alignStart="@+id/signUpButton" />
 
 </RelativeLayout>
