--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,8 +10,9 @@
     </style>
     <style name="BB_BottomBarItem_TitleStyle">
         <item name="android:maxLines">1</item>
-        <item name="android:height">5dp</item>
-        <item name="android:gravity">center_horizontal</item>
+        <item name="android:height">35dp</item>
+        <item name="android:gravity">top</item>
+        <item name="android:textSize">12dp</item>
         <item name="android:includeFontPadding">false</item>
     </style>
 
