--- a/app/src/main/res/layout/hovedakt_akt.xml
+++ b/app/src/main/res/layout/hovedakt_akt.xml
@@ -91,6 +91,15 @@
         app:bb_inActiveTabColor="@color/colorPrimary"
         app:bb_activeTabColor="@color/colorSecondaryDark"
         ></com.roughike.bottombar.BottomBar>
+
+        <ProgressBar
+            style="?android:attr/progressBarStyleLarge"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="202dp"
+            android:id="@+id/progBar_main" />
     </RelativeLayout>
     <android.support.design.widget.NavigationView
         android:layout_width="250dp"
