--- a/app/src/main/res/layout/sidemenu_header.xml
+++ b/app/src/main/res/layout/sidemenu_header.xml
@@ -1,13 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="200dp">
+    android:layout_height="250dp"
+    android:background="@color/colorPrimaryDark">
 
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="200dp"
         android:tint="@color/colorSecondaryDark"
         android:background="@color/colorPrimaryDark"
         android:src="@drawable/ic_action_name"
         android:scaleType="centerCrop"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:weightSum="1">
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="45dp"
+
+            android:src="@mipmap/ic_flags_denmark"
+            android:id="@+id/ic_flag_dk"/>
+    <Switch
+        android:layout_width="wrap_content"
+        android:layout_gravity="center"
+        android:switchMinWidth="60dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.12" />
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@mipmap/ic_flags_uk"
+            android:id="@+id/ic_flag_uk"/>
+    </LinearLayout>
 </LinearLayout>
