log in virker nu.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#FFF9F9</color>
-    <color name="colorPrimaryDark">#13DB53</color>
+    <color name="colorlightGreen">#13DB53</color>
     <color name="colorSecondaryDark">#DB1713</color>
     <color name="colorAccent">#FF4081</color>
-    <color name="colorlightGreen">#43a82a</color>
+    <color name="colorPrimaryDark">#059E00</color>
     <color name="colorDarkGreen">#144707</color>
     <color name="colorDarkBrown">#281a0d</color>
     <color name="colorSemiDarkRed">#700505</color>
