den crasher ikke mere når folk trykker hurtigt på at fjerne vare fra kurv, og den giver et lille check for at vise at varen er tilføjet til kurven

--- a/app/src/main/res/layout/hovedakt_akt.xml
+++ b/app/src/main/res/layout/hovedakt_akt.xml
@@ -54,10 +54,11 @@
 
         <ImageButton
         android:layout_width="45dp"
-        android:src="@drawable/ic_action_sidemenu"
+        android:src="@drawable/ic_action_opendrawer"
+            android:rotation="90"
         android:background="#80ffffff"
         android:layout_marginTop="50dp"
-        android:layout_marginLeft="20dp"
+        android:layout_marginLeft="-15dp"
         android:layout_height="wrap_content"
         android:id="@+id/btn_sidemenu" />
 
