--- a/app/src/main/res/layout/kurv_frag.xml
+++ b/app/src/main/res/layout/kurv_frag.xml
@@ -10,6 +10,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:orientation="vertical"
+        android:id="@+id/linLayout_cart"
         android:layout_height="match_parent"
         android:background="@color/colorSecondaryDark">
         <FrameLayout
