--- a/app/src/main/res/layout/kurv_frag.xml
+++ b/app/src/main/res/layout/kurv_frag.xml
@@ -33,7 +33,7 @@
                 <Button
                     android:layout_width="wrap_content"
                     android:textAlignment="center"
-                    android:text="CheckOut"
+                    android:text="@string/checkOut"
                     android:layout_margin="2dp"
                     android:background="@color/primaryTextRed"
                     android:id="@+id/btn_checkout"
@@ -44,13 +44,14 @@
                      />
                 </FrameLayout>
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_marginLeft="80dp"
                     android:layout_height="match_parent"
-                    android:text="Din indkøbskurv er tom"
+                    android:text="@string/emptyCart"
                     android:textAlignment="center"
                     android:gravity="center"
                     android:textSize="16dp"
-                    android:layout_marginRight="20dp"
+                    android:layout_marginRight="10dp"
                     android:textColor="@color/colorForeGround"
                     android:id="@+id/txt_cart_total"
                     android:layout_toLeftOf="@id/btnFrame" />
