--- a/app/src/main/res/layout/dialog_login.xml
+++ b/app/src/main/res/layout/dialog_login.xml
@@ -30,7 +30,7 @@
         android:inputType="textPassword"
         android:id="@+id/UITxt_dialog_password"/>
 
-    <Button
+    <com.facebook.login.widget.LoginButton
         android:layout_width="190dp"
         android:layout_height="40dp"
         android:layout_marginTop="15dp"
