--- a/app/src/main/res/layout/checkout_frag.xml
+++ b/app/src/main/res/layout/checkout_frag.xml
@@ -1,14 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+ android:layout_width="match_parent"
     android:layout_height="match_parent">
-
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/colorPrimaryDark">
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_margin="5dp"
+    android:background="@color/colorPrimary"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:textAlignment="center"
-        android:textSize="24dp"
+        android:textSize="20dp"
         android:id="@+id/txt_checkout_timetext"
         android:text="@string/checkoutTimepicker"
         />
@@ -36,7 +45,7 @@
         android:id="@+id/txt_checkout_UIText"
         android:text="@string/checkoutExtraText"
         android:textAlignment="center"
-        android:textSize="20dp"/>
+        android:textSize="16dp"/>
 
     <View
         android:background="@drawable/line_margin"
@@ -53,24 +62,96 @@
        android:layout_width="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
-       android:background="@color/colorBlack"
+       android:background="@color/colorPrimaryDark"
        android:layout_height="wrap_content">
     <EditText
         android:layout_width="match_parent"
         android:background="@color/colorPrimary"
         android:layout_margin="1dp"
+        android:textAlignment="textStart"
         android:id="@+id/editTxt_checkout_UIeTxt"
-        android:layout_height="200dp"
+        android:layout_height="80dp"
         />
    </FrameLayout>
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginTop="16dp"
+        android:background="@color/colorPrimaryDark"
+        android:layout_height="wrap_content">
+
+        <ListView
+            android:layout_width="match_parent"
+            android:layout_height="90dp"
+            android:layout_margin="1dp"
+            android:background="@color/colorPrimary"
+            android:id="@+id/list_checkout_finalItems">
+
+        </ListView>
+
+    </FrameLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="35dp"
+        android:orientation="horizontal">
+    <TextView
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="0.6"
+        android:layout_marginTop="2dp"
+        android:layout_marginLeft="50dp"
+        android:textAlignment="textStart"
+        android:textSize="14dp"
+        android:text="@string/checkoutTotalPrice"
+        />
+        <FrameLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="0.3"
+            android:layout_marginRight="3dp"
+            android:layout_marginTop="2dp"
+            android:background="@color/colorSecondaryDark">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="1dp"
+            android:background="@color/colorPrimary"
+            android:orientation="vertical">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="22dp"
+            android:textAlignment="center"
+            android:text="55kr"
+            android:id="@+id/txt_checkout_totalPrice"
+            android:textSize="19dp"/>
+            <View
+                android:background="@drawable/line_margin"
+                android:layerType="software"
+                android:layout_height="4dp"
+                android:layout_width="match_parent"
+                />
+            <View
+                android:background="@drawable/line_margin"
+                android:layerType="software"
+                android:layout_height="4dp"
+                android:layout_width="match_parent"
+                />
+        </LinearLayout>
+        </FrameLayout>
+    </LinearLayout>
+
 
     <Button
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_margin="16dp"
-        android:textSize="24dp"
+        android:textSize="19dp"
+        android:background="@color/colorPrimaryDark"
         android:id="@+id/btn_checkout_sendOrder"
         android:text="@string/checkoutBtnCheckout"
         />
-
 </LinearLayout>
+    </FrameLayout>
+</ScrollView>
