--- a/app/src/main/res/layout/kurv_list.xml
+++ b/app/src/main/res/layout/kurv_list.xml
@@ -38,7 +38,7 @@
             android:id="@+id/txt_cartContent_mainItemtext"
             android:layout_alignTop="@+id/imgBtn_cartContent_removeItem"
             android:layout_alignParentStart="true"
-            android:layout_toStartOf="@+id/txt_cart_priceText" />
+            android:layout_toStartOf="@+id/txt_cartContent_priceText" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -47,7 +47,7 @@
             android:drawableTint="@color/colorBlack"
             android:gravity="center"
             android:textColor="@color/colorForeGround"
-            android:id="@+id/txt_cart_priceText"
+            android:id="@+id/txt_cartContent_priceText"
             android:layout_alignBottom="@+id/imgBtn_cartContent_removeItem"
             android:layout_toStartOf="@+id/imgBtn_cartContent_removeItem" />
     </RelativeLayout>
