--- a/app/src/main/res/layout/checkout_frag.xml
+++ b/app/src/main/res/layout/checkout_frag.xml
@@ -82,14 +82,14 @@
         android:background="@color/colorPrimaryDark"
         android:layout_height="wrap_content">
 
-        <ListView
+        <android.support.v7.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="90dp"
             android:layout_margin="1dp"
             android:background="@color/colorPrimary"
-            android:id="@+id/list_checkout_finalItems">
+            android:id="@+id/Relist_checkout_finalItems">
 
-        </ListView>
+        </android.support.v7.widget.RecyclerView>
 
     </FrameLayout>
     <LinearLayout
