--- a/app/src/main/res/menu/drawermenu.xml
+++ b/app/src/main/res/menu/drawermenu.xml
@@ -30,6 +30,13 @@
         android:title="@string/draweMenuQrCamera"
         android:icon="@drawable/ic_action_camera"
         ></item>
+        <item
+            android:id="@+id/menu_menuHandler"
+            android:orderInCategory="9"
+            android:title="@string/menuHandler"
+            android:icon="@drawable/ic_action_signout"
+            android:visible="false">
+        </item>
 
 <item android:title="@string/draweMenuUser"
     android:orderInCategory="15">
@@ -52,7 +59,6 @@
         android:title="@string/draweMenuSignout"
         android:icon="@drawable/ic_action_signout"
         android:visible="false">
-
     </item>
     </menu>
 </item>
