--- a/app/src/main/res/layout/menu_handler_frag.xml
+++ b/app/src/main/res/layout/menu_handler_frag.xml
@@ -5,8 +5,8 @@
     tools:context="mau.resturantapp.aktivitys.mainFragments.menufrag.MenuHandler_frag">
 
     <fragment
-        android:layout_width="wrap_content"
-        android:layout_height="145dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:name="mau.resturantapp.aktivitys.mainFragments.menufrag.MenuTabsFirebase_frag"
         tools:layout="@layout/food_menu_frag"
         android:id="@+id/tabs" />
